src/objects/Account_Intelligence__c.object
<CustomObject>
    <fields>
        <fullName>W_Split_Commercial_Paint_New__c</fullName>
        <label>Commercial - Paint - New</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>W_Split_Commercial_Repaint__c</fullName>
        <inlineHelpText>e.g. What is the mix of work that this account does?</inlineHelpText>
        <label>Commercial - Repaint</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>W_Split_Commercial_Texture_New__c</fullName>
        <label>Commercial - Texture - New</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>W_Split_Commercial_Texture__c</fullName>
        <label>Commercial - Texture</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>W_Split_New_Residential_Proj_Homes_Paint__c</fullName>
        <label>New Residential - Project Homes - Paint</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>W_Split_Residential_Repaint__c</fullName>
        <label>Residential - Repaint</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>W_Split_Residential_Texture__c</fullName>
        <label>Residential - Texture</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Wattyl_NZ_O_Split_Corporate_Retail__c</fullName>
        <inlineHelpText>e.g. Corporate Mitre10 or PlaceMakers Store</inlineHelpText>
        <label>Corporate - Retail</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Wattyl_NZ_Resene_ShareofBusiness__c</fullName>
        <description>Resene share/percentage of the Business for this Account</description>
        <label>Resene</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Wattyl_NZ_V_Split_Other__c</fullName>
        <inlineHelpText>e.g. Somewhere other than TPC or ITC</inlineHelpText>
        <label>Other</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Account Intelligence</label>
    <nameField>
        <label>Account Intelligence Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Intelligence</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Exterior_Application_Method_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>NULLVALUE(E_Application_Spray__c,0) 
+NULLVALUE(E_Application_Roller__c,0) 
+NULLVALUE(E_Application_Brush__c,0) 
+NULLVALUE(E_Application_Trowel_Mitt__c, 0)
+NULLVALUE(No_Exterior_Paint_Applied__c, 0)
&lt;&gt;1.0  
&amp;&amp; 
NULLVALUE(E_Application_Spray__c,0) 
+NULLVALUE(E_Application_Roller__c,0) 
+NULLVALUE(E_Application_Brush__c,0) 
+NULLVALUE(E_Application_Trowel_Mitt__c, 0)
+NULLVALUE(No_Exterior_Paint_Applied__c, 0)
&lt;&gt; 0</errorConditionFormula>
        <errorDisplayField>No_Exterior_Paint_Applied__c</errorDisplayField>
        <errorMessage>Percentage type of  Exterior Application must add up to 100%</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Exterior_Validation_1</fullName>
        <active>true</active>
        <errorConditionFormula>NULLVALUE(Business_Split_Exterior__c,0) = 0
&amp;&amp; 
 NULLVALUE(Business_Split_Interior__c,0) 
+NULLVALUE(Business_Split_Texture__c ,0) = 1.0
&amp;&amp; 
NULLVALUE(Exterior_Other_None__c,0) &lt;&gt; 1.0</errorConditionFormula>
        <errorDisplayField>Exterior_Other_None__c</errorDisplayField>
        <errorMessage>Since you entered 0% for Exterior in Section 5 (Business split by product type), this field must be 100%.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Exterior_Validation_2</fullName>
        <active>true</active>
        <errorConditionFormula>(NULLVALUE(Business_Split_Exterior__c ,0) &lt;&gt; 0
&amp;&amp; 
NULLVALUE(Exterior_Other_None__c,0)&lt;&gt; 0)</errorConditionFormula>
        <errorDisplayField>Exterior_Other_None__c</errorDisplayField>
        <errorMessage>Exterior field is not 0% in Section 5 (Business Split by Product Type), therefore this field must be blank or 0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Exterior_Validation_3</fullName>
        <active>true</active>
        <errorConditionFormula>NULLVALUE(Business_Split_Exterior__c,0) = 0
&amp;&amp; 
 NULLVALUE(Business_Split_Interior__c,0) 
+NULLVALUE(Business_Split_Texture__c ,0) = 1.0
&amp;&amp; 
NULLVALUE(No_Exterior_Paint_Applied__c,0) &lt;&gt; 1.0</errorConditionFormula>
        <errorDisplayField>No_Exterior_Paint_Applied__c</errorDisplayField>
        <errorMessage>Since you entered 0% for Exterior in Section 5 (Business split by product type), this field must be 100%.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Exterior_Validation_4</fullName>
        <active>true</active>
        <errorConditionFormula>(NULLVALUE(Business_Split_Exterior__c ,0) &lt;&gt; 0
&amp;&amp; 
NULLVALUE(No_Exterior_Paint_Applied__c,0)&lt;&gt; 0)</errorConditionFormula>
        <errorDisplayField>No_Exterior_Paint_Applied__c</errorDisplayField>
        <errorMessage>Exterior field is not 0% in Section 5 (Business Split by Product Type), therefore this field must be blank or 0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>From_Another_Company_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>NULLVALUE(O_Split_Inderpendant_Paint_Specialist__c , 0)  
+ NULLVALUE(O_Split_Inderpendant_Hardware__c,0) 
+ NULLVALUE(O_Split_Corporate_Masters__c,0) 
+ NULLVALUE(O_Split_ITC_Stores__c,0) 
+NULLVALUE(O_Split_Corporate_Other__c, 0)
+NULLVALUE(O_Split_Company_Owned_Stores_Other__c,0)
+NULLVALUE(Wattyl_NZ_O_Split_Corporate_Retail__c,0)
  &lt;&gt;   1.0  
&amp;&amp; 
NULLVALUE(O_Split_Inderpendant_Paint_Specialist__c , 0) 
+ NULLVALUE(O_Split_Inderpendant_Hardware__c,0)
+ NULLVALUE(O_Split_Corporate_Masters__c,0) 
+ NULLVALUE(O_Split_ITC_Stores__c,0) 
+NULLVALUE(O_Split_Corporate_Other__c, 0)
+ NULLVALUE(O_Split_Company_Owned_Stores_Other__c,0)  
+NULLVALUE(Wattyl_NZ_O_Split_Corporate_Retail__c,0)
&lt;&gt; 0</errorConditionFormula>
        <errorDisplayField>O_Split_Company_Owned_Stores_Other__c</errorDisplayField>
        <errorMessage>Percentage Other Company  must add up to 100%</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>How_do_you_get_your_paint_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>NULLVALUE(P_Delivery_Pick_Up__c,0) 
+NULLVALUE(P_Delivery_Delivery__c,0) 
&lt;&gt;1.0  
&amp;&amp; 
NULLVALUE(P_Delivery_Pick_Up__c,0) 
+NULLVALUE(P_Delivery_Delivery__c,0) 

&lt;&gt; 0</errorConditionFormula>
        <errorDisplayField>P_Delivery_Delivery__c</errorDisplayField>
        <errorMessage>Percentage of how do you get your paint must  add up to 100%</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Interior_Application_Method_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>NULLVALUE(I_Application_Spray__c,0) 
+NULLVALUE(I_Application_Roller__c,0) 
+NULLVALUE(I_Application_Brush__c,0) 
+NULLVALUE(I_Application_Trowel_Mitt__c, 0)
+NULLVALUE(No_Interior_Paint_Applied__c, 0)
&lt;&gt;1.0  
&amp;&amp; 
NULLVALUE(I_Application_Spray__c,0) 
+NULLVALUE(I_Application_Roller__c,0) 
+NULLVALUE(I_Application_Brush__c,0) 
+NULLVALUE(I_Application_Trowel_Mitt__c, 0)
+NULLVALUE(No_Interior_Paint_Applied__c, 0)
&lt;&gt; 0</errorConditionFormula>
        <errorDisplayField>No_Interior_Paint_Applied__c</errorDisplayField>
        <errorMessage>Percentage type of  Interior Application must add up to 100%</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Interior_Validation_1</fullName>
        <active>true</active>
        <errorConditionFormula>NULLVALUE(Business_Split_Interior__c ,0) = 0
&amp;&amp;
NULLVALUE(Business_Split_Exterior__c ,0) +
NULLVALUE(Business_Split_Texture__c ,0) = 1.0
&amp;&amp; 
NULLVALUE(Interior_Other_None__c,0)&lt;&gt;1.0</errorConditionFormula>
        <errorDisplayField>Interior_Other_None__c</errorDisplayField>
        <errorMessage>Since you entered 0% for Interior in Section 5 (Business split by product type), this field must be 100%.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Interior_Validation_2</fullName>
        <active>true</active>
        <errorConditionFormula>(NULLVALUE(Business_Split_Interior__c ,0) &lt;&gt; 0
&amp;&amp; 
NULLVALUE(Interior_Other_None__c,0)&lt;&gt; 0)</errorConditionFormula>
        <errorDisplayField>Interior_Other_None__c</errorDisplayField>
        <errorMessage>Interior field is not 0% in Section 5 (Business Split by Product Type), therefore this field must be blank or 0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Interior_Validation_3</fullName>
        <active>true</active>
        <errorConditionFormula>NULLVALUE(Business_Split_Interior__c ,0) = 0
&amp;&amp;
NULLVALUE(Business_Split_Exterior__c ,0) +
NULLVALUE(Business_Split_Texture__c ,0) = 1.0
&amp;&amp; 
NULLVALUE(No_Interior_Paint_Applied__c,0)&lt;&gt;1.0</errorConditionFormula>
        <errorDisplayField>No_Interior_Paint_Applied__c</errorDisplayField>
        <errorMessage>Since you entered 0% for Interior in Section 5 (Business split by product type), this field must be 100%.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Interior_Validation_4</fullName>
        <active>true</active>
        <errorConditionFormula>(NULLVALUE(Business_Split_Interior__c ,0) &lt;&gt; 0
&amp;&amp; 
NULLVALUE(No_Interior_Paint_Applied__c,0)&lt;&gt; 0)</errorConditionFormula>
        <errorDisplayField>No_Interior_Paint_Applied__c</errorDisplayField>
        <errorMessage>Interior field is not 0% in Section 5 (Business Split by Product Type), therefore this field must be blank or 0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Paint_Purchase_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>NULLVALUE(V_Split_Company_Owned_Stores__c , 0)  + NULLVALUE(V_Split_Corporate_Masters__c, 0) + NULLVALUE(V_Split_Inderpendant_Hardware__c, 0)  + NULLVALUE(V_Split_Inderpendant_Paint_Specialist__c, 0) +NULLVALUE(V_Split_ITC_Stores__c, 0)
+NULLVALUE(Wattyl_NZ_V_Split_Other__c,0)
&lt;&gt;   1.0  
&amp;&amp; NULLVALUE(V_Split_Company_Owned_Stores__c , 0)  + NULLVALUE(V_Split_Corporate_Masters__c, 0) + NULLVALUE(V_Split_Inderpendant_Hardware__c, 0)  + NULLVALUE(V_Split_Inderpendant_Paint_Specialist__c, 0) +NULLVALUE(V_Split_ITC_Stores__c, 0)
+NULLVALUE(Wattyl_NZ_V_Split_Other__c,0)
&lt;&gt;   0</errorConditionFormula>
        <errorDisplayField>V_Split_Inderpendant_Hardware__c</errorDisplayField>
        <errorMessage>Percentage of  Paint Purchase must add up to 100%</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Pct_of_Spend_Preparation_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>NULLVALUE(A_Spend_Preparation_P__c,0) 
+NULLVALUE(A_Spend_Preparation_DIY__c,0) 
+NULLVALUE(A_Spend_Preparation_T__c,0) 
&lt;&gt;1.0  
&amp;&amp; 
NULLVALUE(A_Spend_Preparation_P__c,0) 
+NULLVALUE(A_Spend_Preparation_DIY__c,0) 
+NULLVALUE(A_Spend_Preparation_T__c,0) 


&lt;&gt; 0</errorConditionFormula>
        <errorDisplayField>A_Spend_Preparation_DIY__c</errorDisplayField>
        <errorMessage>Percentage type of Spend Preparation must add up to 100%</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Percentage_of_Spend_Brushes_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>NULLVALUE(A_Spend_Brushes_P__c,0) 
+NULLVALUE(A_Spend_Brushes_DIY__c,0) 
+NULLVALUE(A_Spend_Brushes_T__c,0) 
&lt;&gt;1.0  
&amp;&amp; 
NULLVALUE(A_Spend_Brushes_P__c,0) 
+NULLVALUE(A_Spend_Brushes_DIY__c,0) 
+NULLVALUE(A_Spend_Brushes_T__c,0) 

&lt;&gt; 0</errorConditionFormula>
        <errorDisplayField>A_Spend_Brushes_DIY__c</errorDisplayField>
        <errorMessage>Percentage type of Spend Brushes must add up to 100%</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Percentage_of_Spend_Rollers_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>NULLVALUE(A_Spend_Rollers_P__c,0) 
+NULLVALUE(A_Spend_Rollers_DIY__c,0) 
+NULLVALUE(A_Spend_Rollers_T__c,0) 
&lt;&gt;1.0  
&amp;&amp; 
NULLVALUE(A_Spend_Rollers_P__c,0) 
+NULLVALUE(A_Spend_Rollers_DIY__c,0) 
+NULLVALUE(A_Spend_Rollers_T__c,0) 

&lt;&gt; 0</errorConditionFormula>
        <errorDisplayField>A_Spend_Rollers_DIY__c</errorDisplayField>
        <errorMessage>Percentage type of Spend Rollers must add up to 100%</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Percentage_of_Spend_Spray_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>NULLVALUE(A_Spend_Spray_Equipment_P__c,0) 
+NULLVALUE(A_Spend_Spray_Equipment_DIY__c,0) 
+NULLVALUE(A_Spend_Spray_Equipment_T__c,0) 

&lt;&gt;1.0  
&amp;&amp; 
NULLVALUE(A_Spend_Spray_Equipment_P__c,0) 
+NULLVALUE(A_Spend_Spray_Equipment_DIY__c,0) 
+NULLVALUE(A_Spend_Spray_Equipment_T__c,0) 

&lt;&gt; 0</errorConditionFormula>
        <errorDisplayField>A_Spend_Spray_Equipment_DIY__c</errorDisplayField>
        <errorMessage>Percentage type of Spend Spray must add up to 100%</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Percentage_of_Spend_Texture_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>NULLVALUE(A_Spend_Texture_P__c,0) 
+NULLVALUE(A_Spend_Texture_DIY__c,0) 
+NULLVALUE(A_Spend_Texture_T__c,0) 
&lt;&gt;1.0  
&amp;&amp; 
NULLVALUE(A_Spend_Texture_P__c,0) 
+NULLVALUE(A_Spend_Texture_DIY__c,0) 
+NULLVALUE(A_Spend_Texture_T__c,0) 



&lt;&gt; 0</errorConditionFormula>
        <errorDisplayField>A_Spend_Texture_DIY__c</errorDisplayField>
        <errorMessage>Percentage type of Spend texture must add up to 100%</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Share_of_Business_Validation_rule</fullName>
        <active>false</active>
        <errorConditionFormula>if ($Profile.Name &lt;&gt; &apos;API USER&apos;,
NULLVALUE(ROUND(Valspar_ShareofBusiness__c,2),0)
+NULLVALUE(PPG_ShareofBusiness__c ,0) 
+NULLVALUE(+Other_ShareofBusiness__c ,0) 
+NULLVALUE(Dulux_ShareofBusiness__c ,0) 
+NULLVALUE(Haymes_ShareofBusiness__c ,0) 
+NULLVALUE(Wattyl_NZ_Resene_ShareofBusiness__c,0) 
&lt;&gt;1.0
&amp;&amp;
NULLVALUE(Valspar_ShareofBusiness__c,0)
+NULLVALUE(PPG_ShareofBusiness__c ,0) 
+NULLVALUE(+Other_ShareofBusiness__c ,0) 
+NULLVALUE(Dulux_ShareofBusiness__c ,0) 
+NULLVALUE(Haymes_ShareofBusiness__c ,0) 
+NULLVALUE(Wattyl_NZ_Resene_ShareofBusiness__c,0)
&lt;&gt;0,null)</errorConditionFormula>
        <errorDisplayField>Other_ShareofBusiness__c</errorDisplayField>
        <errorMessage>Percentage Share  of Business must add up to 100%</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Split_of_Business_Validation_rule</fullName>
        <active>true</active>
        <errorConditionFormula>NULLVALUE(Business_Split_Interior__c ,0)  
+NULLVALUE(Business_Split_Exterior__c,0) 
+NULLVALUE(Business_Split_Texture__c,0) 
&lt;&gt;1.0  
&amp;&amp; 
NULLVALUE(Business_Split_Interior__c ,0)  
+NULLVALUE(Business_Split_Exterior__c,0) 
+NULLVALUE(Business_Split_Texture__c,0) 

&lt;&gt; 0</errorConditionFormula>
        <errorDisplayField>Business_Split_Texture__c</errorDisplayField>
        <errorMessage>Percentage Split  of Business must add up to 100%</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Texture_Application_Method_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>NULLVALUE(T_Application_Spray__c,0) 
+NULLVALUE(T_Application_Roller__c,0) 
+NULLVALUE(T_Application_Brush__c,0) 
+NULLVALUE(T_Application_Trowel_Mitt__c, 0)
+NULLVALUE(No_Texture_Paint_Applied__c, 0)
&lt;&gt;1.0  
&amp;&amp; 
NULLVALUE(T_Application_Spray__c,0) 
+NULLVALUE(T_Application_Roller__c,0) 
+NULLVALUE(T_Application_Brush__c,0) 
+NULLVALUE(T_Application_Trowel_Mitt__c, 0)
+NULLVALUE(No_Texture_Paint_Applied__c, 0)
&lt;&gt; 0</errorConditionFormula>
        <errorDisplayField>No_Texture_Paint_Applied__c</errorDisplayField>
        <errorMessage>Percentage type of Texture Application must add up to 100%</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Texture_Validation_1</fullName>
        <active>true</active>
        <errorConditionFormula>NULLVALUE(Business_Split_Texture__c ,0) = 0
&amp;&amp; 
 NULLVALUE(Business_Split_Interior__c,0) 
+NULLVALUE(Business_Split_Exterior__c,0) = 1.0
&amp;&amp; 
NULLVALUE(Texture_Other_None__c,0)&lt;&gt;1.0</errorConditionFormula>
        <errorDisplayField>Texture_Other_None__c</errorDisplayField>
        <errorMessage>Since you entered 0% for Texture in Section 5 (Business split by product type), this field must be 100%.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Texture_Validation_2</fullName>
        <active>true</active>
        <errorConditionFormula>(NULLVALUE(Business_Split_Texture__c ,0) &lt;&gt; 0
&amp;&amp; 
NULLVALUE(Texture_Other_None__c,0) &lt;&gt; 0)</errorConditionFormula>
        <errorDisplayField>Texture_Other_None__c</errorDisplayField>
        <errorMessage>Texture field is not 0% in Section 5 (Business Split by Product Type), therefore this field must be blank or 0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Texture_Validation_3</fullName>
        <active>true</active>
        <errorConditionFormula>NULLVALUE(Business_Split_Texture__c ,0) = 0
&amp;&amp; 
 NULLVALUE(Business_Split_Interior__c,0) 
+NULLVALUE(Business_Split_Exterior__c,0) = 1.0
&amp;&amp; 
NULLVALUE(No_Texture_Paint_Applied__c,0)&lt;&gt;1.0</errorConditionFormula>
        <errorDisplayField>No_Texture_Paint_Applied__c</errorDisplayField>
        <errorMessage>Since you entered 0% for Texture in Section 5 (Business split by product type), this field must be 100%.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Texture_Validation_4</fullName>
        <active>true</active>
        <errorConditionFormula>NULLVALUE(Business_Split_Texture__c ,0) &lt;&gt; 0
&amp;&amp; 
NULLVALUE(No_Texture_Paint_Applied__c,0)&lt;&gt; 0</errorConditionFormula>
        <errorDisplayField>No_Texture_Paint_Applied__c</errorDisplayField>
        <errorMessage>Texture field is not 0% in Section 5 (Business Split by Product Type), therefore this field must be blank or 0.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Type_of_Exterior_Products_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>NULLVALUE(Exterior_Other_UP__c,0) 
+NULLVALUE(Exterior_Other_T__c,0) 
+NULLVALUE(Exterior_Other_P__c,0)
+NULLVALUE(Exterior_Other_EL__c,0)
+NULLVALUE(Exterior_Other_None__c,0)
&lt;&gt;1.0  
&amp;&amp; 
NULLVALUE(Exterior_Other_UP__c,0) 
+NULLVALUE(Exterior_Other_T__c,0) 
+NULLVALUE(Exterior_Other_P__c,0)
+NULLVALUE(Exterior_Other_EL__c,0)
+NULLVALUE(Exterior_Other_None__c,0)
&gt; 0</errorConditionFormula>
        <errorDisplayField>Exterior_Other_None__c</errorDisplayField>
        <errorMessage>Percentage type of Exterior Products  must add up to 100%</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Type_of_Interior_Products_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>NULLVALUE(Interior_Other_UP__c,0) 
+NULLVALUE(Interior_Other_T__c,0) 
+NULLVALUE(Interior_Other_P__c,0)
+NULLVALUE(Interior_Other_EL__c,0)
+NULLVALUE(Interior_Other_None__c,0)
&lt;&gt;1.0  
&amp;&amp; 
NULLVALUE(Interior_Other_UP__c,0) 
+NULLVALUE(Interior_Other_T__c,0) 
+NULLVALUE(Interior_Other_P__c,0)
+NULLVALUE(Interior_Other_EL__c,0)
+NULLVALUE(Interior_Other_None__c,0)
&lt;&gt; 0</errorConditionFormula>
        <errorDisplayField>Interior_Other_None__c</errorDisplayField>
        <errorMessage>Percentage Type of Interior must add up to 100%</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Type_of_Texture_Products_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>NULLVALUE(Texture_Other_UP__c,0) 
+NULLVALUE(Texture_Other_T__c,0) 
+NULLVALUE(Texture_Other_P__c,0)
+NULLVALUE(Texture_Other_EL__c,0)
+NULLVALUE(Texture_Other_None__c,0)
&lt;&gt;1.0  
&amp;&amp; 
NULLVALUE(Texture_Other_UP__c,0) 
+NULLVALUE(Texture_Other_T__c,0) 
+NULLVALUE(Texture_Other_P__c,0)
+NULLVALUE(Texture_Other_EL__c,0)
+NULLVALUE(Texture_Other_None__c,0)
&lt;&gt; 0</errorConditionFormula>
        <errorDisplayField>Texture_Other_None__c</errorDisplayField>
        <errorMessage>Percentage type of Texture Products  must add up to 100%</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Type_of_Work_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>NULLVALUE(W_Split_Commercial_Repaint__c , 0)  
+NULLVALUE(W_Split_Commercial_Texture__c,0) 
+NULLVALUE(W_Split_Residential_Repaint__c,0) 
+NULLVALUE(W_Split_Commercial_Texture_New__c,0) 
+NULLVALUE(W_Split_Commercial_Paint_New__c, 0)
+NULLVALUE(W_Split_Residential_Texture__c,0)
+NULLVALUE(W_Split_New_Residential_Proj_Homes_Paint__c,0)
&lt;&gt;1.0  
&amp;&amp; 
NULLVALUE(W_Split_Commercial_Repaint__c , 0)  
+NULLVALUE(W_Split_Commercial_Texture__c,0) 
+NULLVALUE(W_Split_Residential_Repaint__c,0) 
+NULLVALUE(W_Split_Commercial_Texture_New__c,0) 
+NULLVALUE(W_Split_Commercial_Paint_New__c, 0)
+NULLVALUE(W_Split_Residential_Texture__c,0)
+NULLVALUE(W_Split_New_Residential_Proj_Homes_Paint__c,0)
&lt;&gt; 0</errorConditionFormula>
        <errorDisplayField>W_Split_New_Residential_Proj_Homes_Paint__c</errorDisplayField>
        <errorMessage>Percentage Type of Work  must add up to 100%</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>When_Do_You_Order_Paint_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>NULLVALUE(O_Time_Same_Day__c,0) 
+NULLVALUE(O_Time_Day_Before__c,0) 
+NULLVALUE(O_Time_A_Week_Prior__c,0) 
+NULLVALUE(O_Time_Other__c,0) 
&lt;&gt;1.0  
&amp;&amp; 
NULLVALUE(O_Time_Same_Day__c,0) 
+NULLVALUE(O_Time_Day_Before__c,0) 
+NULLVALUE(O_Time_A_Week_Prior__c,0) 
+NULLVALUE(O_Time_Other__c,0) 
&lt;&gt; 0</errorConditionFormula>
        <errorDisplayField>O_Time_Other__c</errorDisplayField>
        <errorMessage>Percentage when do you order paint  must add up to 100%</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>When_Do_You_Pickup_Paint_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>NULLVALUE(C_Time_6am_7am__c,0) 
+NULLVALUE(C_Time_7am_8am__c,0) 
+NULLVALUE(C_Time_3pm_4pm__c,0) 
+NULLVALUE(C_Time_4pm_5pm__c,0) 
+NULLVALUE(C_Time_Other__c,0) 

&lt;&gt;1.0  
&amp;&amp; 
NULLVALUE(C_Time_6am_7am__c,0) 
+NULLVALUE(C_Time_7am_8am__c,0) 
+NULLVALUE(C_Time_3pm_4pm__c,0) 
+NULLVALUE(C_Time_4pm_5pm__c,0) 
+NULLVALUE(C_Time_Other__c,0) 

&lt;&gt; 0</errorConditionFormula>
        <errorDisplayField>C_Time_Other__c</errorDisplayField>
        <errorMessage>Percentage when do you pickup paint  must add up to 100%</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Where_do_you_buy_Accessoried_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>NULLVALUE(B_Accessories_Company_Owned_Stores__c,0) 
+NULLVALUE(B_Accessories_ITC_Stores__c,0) 
+NULLVALUE(B_Accessories_Corporate__c,0) 
+NULLVALUE(B_Accessories_Inderpendant_Hardware__c, 0)
+NULLVALUE(B_Accessories_Inderpendant_Paint__c, 0)
+NULLVALUE(B_Accessories_Online__c,0)
+NULLVALUE(B_Accessories_Wholesale__c,0)
&lt;&gt;1.0  
&amp;&amp; 
NULLVALUE(B_Accessories_Company_Owned_Stores__c,0) 
+NULLVALUE(B_Accessories_ITC_Stores__c,0) 
+NULLVALUE(B_Accessories_Corporate__c,0) 
+NULLVALUE(B_Accessories_Inderpendant_Hardware__c, 0)
+NULLVALUE(B_Accessories_Inderpendant_Paint__c, 0)
+NULLVALUE(B_Accessories_Online__c,0)
+NULLVALUE(B_Accessories_Wholesale__c,0)
&lt;&gt; 0</errorConditionFormula>
        <errorDisplayField>B_Accessories_Wholesale__c</errorDisplayField>
        <errorMessage>Percentage Where you buy Accessories  must add up to 100%</errorMessage>
    </validationRules>
</CustomObject>